# Counterfactuals-xai-iml22

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  backend_launch.sh  build_docker.sh  install_polyjuice.sh  push_docker.sh  pyproject.toml  requirements.txt
backend/: AlignmentGraph.py  app.py  easy_polyjuice.py  roberta_inference.py  umap_visualization.py
backend/data/NLI/original/: cfs_example.tsv
backend/data/NLI/submitted/: cfs_example_submitted.tsv
backend/openai/: README.md  gpt3_suggestions.py
backend/pydantic_models/: nli_data_point.py
classifiers/: README.md  data.py  tune.py  utils.py
exploratory_notebooks/: polyjuice.ipynb
react-frontend/: Dockerfile  package-lock.json  package.json  tsconfig.json
react-frontend/public/: index.html
react-frontend/src/: App.css  App.tsx  Visualization.tsx  index.css  system.js  useTour.tsx  useTour_button.tsx
react-frontend/src/backend/: BackendQueryEngine.tsx  json-decoder.ts
react-frontend/src/components/: DataPointComponent.tsx
react-frontend/src/components/BoxCF/: BoxCF.tsx  boxcf.css
react-frontend/src/components/BoxPolyjuice/: BoxPolyjuice.tsx  boxpolyjuice.css
react-frontend/src/components/BoxSentencePair/: BoxSentencePair.tsx  boxsentencepair.css
react-frontend/src/components/BoxTable/: BoxTable.tsx  boxtable.css
react-frontend/src/components/EmbeddingPlot/: EmbeddingPlot.css  EmbeddingPlot.tsx  EmbeddingPlot2.tsx
react-frontend/src/components/ScatterPlot/: ScatterPlot.tsx
react-frontend/src/types/: NLIDataPoint.ts  NLISubmissionDisplay.ts  NLISubmissionDisplayPoint.ts
(+8 files in other folders)
