[tool.poetry]
name = "counterfactuals-xai-iml22"
version = "0.1.0"
description = ""
authors = ["Robin Chan <chanr@student.ethz.ch>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"
matplotlib = "^3.5.2"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
collatex = "^2.2"
Levenshtein = "^0.18.1"
python-multipart = "^0.0.5"
openai = "^0.19.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
notebook = "^6.4.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
